[Support]: Matrix variables with `.` in them aren't converted to `_` for azure-devops. Fixes #25

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,27 @@
 * @github/actions-importer-reviewers
+****GH-ACTIONS-EXPORT/.vscode****
+
+#25- 0.00
+
+#25+ 0.00
+
+<!--- 7353521 / 7333521 --->
+# Outline/
+ 
+ • elements/context/arial/UTF-8
+
+ • json{
+    "text" : write ; return***context***
+ }
+
+ • json{
+    "text" : read ; return***arial***
+ }
+
+ • json{
+    "<documenting>/Details" : ln ; return~<-+UTF-8+->***doctype***
+ }
+
+ #(Configure).***name.mhtml***.xml/rss
+
+ # 
